Updated html files

--- a/CodeBook.html
+++ b/CodeBook.html
@@ -371,11 +371,10 @@ summary {
 
 <div id="variables" class="section level2">
 <h2>Variables</h2>
-<p>The script run_analysis.r produces two sets <em>complete_set</em> and <em>activity_summary</em> that both inclue the following variables:</p>
+<p>The script <em>run_analysis.r</em> produces two sets <em>complete_set</em> and <em>activity_summary</em> that both include the following variables:</p>
 <ol style="list-style-type: decimal">
 <li><p>Activity</p></li>
-<li>Measurements: Standard deviation and mean of measurements in the time domain and frequency domain for</li>
-</ol>
+<li>Measurements: standard deviation and mean of measurements in the time domain and frequency domain for
 <ul>
 <li>Body Acceleration</li>
 <li>Gravity Acceleration</li>
@@ -387,7 +386,8 @@ summary {
 <li>Body Acceleration Jerk Magnitude</li>
 <li>Body Gyroscope Magnitude</li>
 <li>Body Gyroscope Jerk Magnitude</li>
-</ul>
+</ul></li>
+</ol>
 <div id="activity" class="section level3">
 <h3>1. Activity</h3>
 <ul>
