--- a/README.html
+++ b/README.html
@@ -369,6 +369,7 @@ summary {
 <ul>
 <li>README.md<br />
 </li>
+<li>README.html</li>
 <li>run_analysis.R<br />
 </li>
 <li>CodeBook.md<br />
@@ -380,7 +381,7 @@ summary {
 <li>Before running <em>run_analysis.R</em>, ensure the raw data is present under folder <em>UCI HAR Dataset</em>
 <ul>
 <li>Download the dataset from <a href="https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip" class="uri">https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip</a></li>
-<li>unzip it to the same location as run_analysis.R</li>
+<li>unzip it to the same location as <em>run_analysis.R</em></li>
 </ul></li>
 <li>Run <em>run_analysis.R</em>. Output sets are named <em>complete_set</em> and <em>activity_summary</em>.</li>
 </ol>
